# Stalknik_MK2

./: .gitignore  .gitmodules  PFE.pptx  README.md
Cozmo_follow_car/: Calibration_Camera.py  Camera_record.py  Changement_base_Cozmo.py  Detection_CascadeClassifier.py  Detection_IA.py  Verif_distance_point_robot.py  test.py
PFE_Video/: outpy.avi  outpy2.avi
catkin_ws/: README.md
catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
catkin_ws/logs/offboard_node/: build.make.002.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.008.log.stderr  build.make.010.log.stderr  build.make.011.log.stderr  build.make.012.log.stderr  build.make.014.log.stderr  build.make.015.log.stderr  build.make.017.log.stderr  build.make.018.log.stderr  build.make.019.log.stderr  build.make.036.log.stderr
catkin_ws/logs/pos_from_video/: build.check.006.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr
catkin_ws/src/: .rosinstall  .rosinstall.bak
catkin_ws/src/offboard_node/: CMakeLists.txt
catkin_ws/src/pos_from_video/: CMakeLists.txt  package.xml
ros_stalknik/: 0.8.1  README_ROS.md
ros_stalknik/launch/: All_launcher.py  sim_launcher_.py
ros_stalknik/src/img_processing/: package.xml  setup.cfg  setup.py
ros_stalknik/src/img_processing/img_processing/: main_img.py  main_img_process.py  main_img_processing.py
ros_stalknik/src/img_processing/launch/: local.launch.py
ros_stalknik/src/img_processing/param/: params.yaml
ros_stalknik/src/img_processing/test/: test_img.py
(+1559 files in other folders)
