<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>img_processing</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="camille.ulrb@gmail.com">rikic</maintainer>
  <license>TODO: License declaration</license>

  <depend>libopencv-dev</depend>
  <depend>python3-numpy</depend>


  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>python_cmake_module</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <build_depend>libboost-dev</build_depend>
  <build_depend>libboost-python-dev</build_depend>
  <build_depend version_gte="3.3.0">opencv3</build_depend>

  <build_depend>rclpy</build_depend>
  <build_depend>torch</build_depend>

  <exec_depend>imageai</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>libboost-dev</exec_depend>
  <exec_depend>libboost-python-dev</exec_depend>
  <exec_depend version_gte="3.3.0">opencv3</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <!-- <exec_depend>cv_bridge</exec_depend> -->
  <exec_depend>image_geometry</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
